@startuml ecommerce

!theme mars

class Product<<Entity>> {
    id: long
    name: string
    price: double
    stock: int
}

class User<<Entity>> {
    id: long
    name: string
    lastName: string
    email: string
    password: string
    buys: List<Buy>
}

class Buy<<Entity>> {
    buyNumber: long
    buyer: User
    items: List<ItemProduct>
    total: double
}

class ItemProduct {
    buy: Buy
    product: Product
    quantity: int
}

Buy "1" *--* "*" ItemProduct
ItemProduct "1" *-- "1" Product

@enduml